--- a/SolutionExplorerContracts/package.json
+++ b/SolutionExplorerContracts/package.json
@@ -2,7 +2,8 @@
   "name": "solution_explorer_contracts",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
