:truck: Rename Modules

--- a/src/SolutionExplorer.Service/package.json
+++ b/src/SolutionExplorer.Service/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "solution_explorer_contracts",
-  "version": "0.1.0",
+  "name": "solutionexplorer.service",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
