--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "solution_explorer_poc",
-  "version": "0.1.0",
+  "name": "solutionexplorer",
+  "version": "0.0.1",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "minstall --no-hoist aurelia-* --trust-local-modules ."
+    "postinstall": "minstall --trust-local-modules ."
   },
   "repository": {
     "type": "git",
