--- a/src/SolutionExplorer.Contracts/package.json
+++ b/src/SolutionExplorer.Contracts/package.json
@@ -6,7 +6,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --outdir dist --declaration"
+    "build": "rm -fr dist && tsc --outdir dist --declaration"
   },
   "author": "",
   "license": "ISC"
