--- a/src/SolutionExplorer.Repository.ProcessEngine/package.json
+++ b/src/SolutionExplorer.Repository.ProcessEngine/package.json
@@ -6,8 +6,14 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --outdir dist --declaration"
+    "build": "rm -fr dist && tsc --outdir dist --declaration"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@process-engine/process_engine_contracts": "^9.0.0",
+    "popsicle": "^10.0.1",
+    "solutionexplorer.contracts": "0.0.1",
+    "solutionexplorer.repository.contracts": "0.0.1"
+  }
 }
