--- a/src/SolutionExplorer.Service.Contracts/package.json
+++ b/src/SolutionExplorer.Service.Contracts/package.json
@@ -6,8 +6,11 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --outdir dist --declaration"
+    "build": "rm -fr dist && tsc --outdir dist --declaration"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "solutionexplorer.contracts": "0.0.1"
+  }
 }
