--- a/src/package.json
+++ b/src/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "minstall": "^3.3.0",
     "typescript": "^2.9.1"
+  },
+  "dependencies": {
+    "addict-ioc": "^2.3.7"
   }
 }
