--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "minstall --trust-local-modules ."
+    "postinstall": "minstall --trust-local-modules src"
   },
   "repository": {
     "type": "git",
