--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "postinstall": "minstall --trust-local-modules src"
   },
   "repository": {
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/process-engine/solution_explorer_poc#readme",
   "devDependencies": {
+    "jasmine-core": "^3.1.0",
     "minstall": "^3.3.0",
+    "mocha": "^5.2.0",
     "typescript": "^2.9.1"
   },
   "dependencies": {
