--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "mocha",
+    "build": "./build.sh",
     "postinstall": "minstall --trust-local-modules src"
   },
   "repository": {
