--- a/src/skeleton/package.json
+++ b/src/skeleton/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "addict-ioc": "^2.3.7",
     "solutionexplorer.repository.processengine": "0.0.1",
+    "solutionexplorer.repository.filesystem": "0.0.1",
     "solutionexplorer.service": "0.0.1"
   }
 }
