--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test/**/*.test.js",
     "build": "./build.sh",
     "postinstall": "minstall --trust-local-modules src"
   },
