--- a/src/SolutionExplorer.Repository.FileSystem/package.json
+++ b/src/SolutionExplorer.Repository.FileSystem/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@essential-projects/errors_ts": "^1.2.0",
     "fs-extra": "^6.0.1",
     "solutionexplorer.contracts": "0.0.1",
     "solutionexplorer.repository.contracts": "0.0.1"
