:white_check_mark: Make Tests Green

--- a/src/SolutionExplorer.Service/package.json
+++ b/src/SolutionExplorer.Service/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@essential-projects/errors_ts": "^1.2.0",
     "solutionexplorer.contracts": "0.0.1",
-    "solutionexplorer.service.contracts": "0.0.1",
-    "solutionexplorer.repository.contracts": "0.0.1"
+    "solutionexplorer.repository.contracts": "0.0.1",
+    "solutionexplorer.service.contracts": "0.0.1"
   }
 }
