--- a/src/SolutionExplorer.Service.Contracts/package.json
+++ b/src/SolutionExplorer.Service.Contracts/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@essential-projects/core_contracts": "^2.0.0",
     "solutionexplorer.contracts": "0.0.1"
   }
 }
